adds html class nav bar

--- a/index.html
+++ b/index.html
@@ -9,5 +9,15 @@
 </head>
 <body>
 
+    <div class="navbar">
+       <B>MY<span>SERVICER</span></B> 
+       <li> <button>REQUEST</button></li>
+       <li>How it works</li>
+       <li>About</li>
+       <li>Services</li>
+       <li>Home</li>
+    </div>
+    
+   
 </body>
 </html>
