adds html class advert

--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
        <li>Services</li>
        <li>Home</li>
     </div>
-    
-   
+    <div class="advert">
+        <center><h1>Worlds most proffesional <br>
+            customer service</h1>
+        Our technicians have decades of practical, 
+        in-field experience besides factory training. This means they <br>
+    have knowledge and skills needed to diagnose and repair any appliance you may have.
+    <pre> <br><br><br><button>OUR SERVICES</button>        <BUtton>GET IN TOUCH</BUtton></pre>
+</center>
+</div>
 </body>
 </html>
