adds html class about_us

--- a/index.html
+++ b/index.html
@@ -26,5 +26,19 @@
     <pre> <br><br><br><button>OUR SERVICES</button>        <BUtton>GET IN TOUCH</BUtton></pre>
 </center>
 </div>
+<div class="about_us"> 
+<div class="about_text">
+    ABOUT US <br><br><br><br>
+    Delivery technical Services <br><br>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum eius dolorem fugiat autem. 
+    Natus eos, excepturi eius reprehenderit dolores eligendi.
+    Laudantium architecto reprehenderit assumenda eos numquam odit maiores recusandae sit! <br><br><br>
+    <button>GET STARTED</button>
+</div>
+<div class="about_pic">
+    <img src="images/image 1.png" alt="">
+</div>    
+</div>
+   
 </body>
 </html>
