adds html class affordable

--- a/index.html
+++ b/index.html
@@ -39,6 +39,35 @@
     <img src="images/image 1.png" alt="">
 </div>    
 </div>
+<div class="affordable"> <center> <span id="afford"> AFFORDABLE REPAIR SOLUTIONS </span><br><br>
+<b>High-Quality and Friendly <br>
+Services at Fair Prices <br><br>
+<button>GET IN TOUCH</button>
+</b>
+</center></div>
+
+<div class="our_services"> 
+<div class="service_text"> <h1><center>Our Services</center></h1><br><br><br></div>
    
+<div class="list">
+    <li><img src="images/Rectangle 7.png" alt=""> 
+        <h2>Airline Services</h2><br><br>
+        Our quakified team strives for your <br>
+        satisfaction, while offering the highest <br>
+        levels of 
+        </li>
+        <li><img src="images/Rectangle 7.png" alt=""> 
+            <h2>Airline Services</h2><br><br>
+            Our quakified team strives for your <br>
+            satisfaction, while offering the highest <br>
+            levels of 
+            </li> <li><img src="images/Rectangle 7.png" alt=""> 
+                <h2>Airline Services</h2><br><br>
+                Our quakified team strives for your <br>
+                satisfaction, while offering the highest <br>
+                levels of 
+                </li>
+       
+</div>
 </body>
 </html>
