adds html class contact_us

--- a/index.html
+++ b/index.html
@@ -69,5 +69,43 @@ Services at Fair Prices <br><br>
                 </li>
        
 </div>
+<div class="contact_us">
+    <div contact_text>
+<h1>Contact Us </h1><p>
+    Here is the easiest way to react us,Write us a <br>
+    Message and we will get back. <br><br>
+</p>
+<p>
+    <h3>Address:</h3> <br>
+    55 Bloomfield Ave,Pinedale,WY82941,United <br>
+    States <br><br>
+
+    <h3>phone</h3><br>
+    0700001000 <br><br>
+    <h3>Email</h3> <br>
+    sim@moringa.com
+</p>
+
+    </div>
+    <div class="contact_form">
+<h2>Get in touch with us</h2><br><br>
+
+<form action="">
+    <label for="userName">Username </label><br>
+    <input type="text" placeholder="Username"><br><br>
+    <label for="userName">Email </label><br>
+    <input type="text" placeholder="example@gmail.com"><br><br>
+    <label for="userName">Message </label><br>
+    <input type="text" placeholder="Write your message here" style="height: 70px;"><br><br>
+   <button>Send Message</button>
+
+</form>
+
+    </div>
+   
+</div>
+
+</div>
+   
 </body>
 </html>
