--- a/index.html
+++ b/index.html
@@ -106,6 +106,11 @@ Services at Fair Prices <br><br>
 </div>
 
 </div>
+<div class="footer">
+    <center>
+        &copy;2021 MYSERVICE.All Rights Reserved. Privacy Policy
+    </center>
+</div>
    
 </body>
 </html>
