updates html changes

--- a/index.html
+++ b/index.html
@@ -51,18 +51,18 @@ Services at Fair Prices <br><br>
    
 <div class="list">
     <li><img src="images/Rectangle 7.png" alt=""> 
-        <h2>Airline Services</h2><br><br>
+        <h2>Airline Services</h2><br>
         Our quakified team strives for your <br>
         satisfaction, while offering the highest <br>
         levels of 
         </li>
         <li><img src="images/Rectangle 7.png" alt=""> 
-            <h2>Airline Services</h2><br><br>
+            <h2>Airline Services</h2><br>
             Our quakified team strives for your <br>
             satisfaction, while offering the highest <br>
             levels of 
             </li> <li><img src="images/Rectangle 7.png" alt=""> 
-                <h2>Airline Services</h2><br><br>
+                <h2>Airline Services</h2><br>
                 Our quakified team strives for your <br>
                 satisfaction, while offering the highest <br>
                 levels of 
